<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/dialogLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        app:cardUseCompatPadding="true"
        android:elevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/UserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:drawableLeft="@drawable/ic_name"
                android:drawablePadding="4dp"
                android:padding="4dp"
                android:textSize="16sp"
                android:textColor="@color/md_grey_800"
                android:text="@string/username"/>

            <TextView
                android:id="@+id/ProfileLink"
                android:autoLink="all"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:drawableLeft="@drawable/ic_repo_link"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:drawablePadding="4dp"
                android:padding="4dp"
                android:textSize="16sp"
                android:clickable="true"
                android:textColor="@color/md_grey_800"
                android:text="@string/profile_link"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingTop="8dp"
                android:paddingBottom="16dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp">

                    <View
                        android:id="@+id/labe1"
                        android:layout_width="8dp"
                        android:layout_height="36dp"
                        android:background="@color/md_grey_800" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="5dp"
                        android:layout_toRightOf="@+id/labe1"
                        android:layout_centerVertical="true"
                        android:gravity="center_vertical"
                        android:padding="4dp"
                        android:text="@string/popular_repo"
                        android:textColor="@color/md_grey_800"
                        android:textSize="16sp" />

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/RepoName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_repositories"
                        android:drawablePadding="4dp"
                        android:layout_marginTop="4dp"
                        android:padding="4dp"
                        android:textSize="16sp"
                        android:textColor="@color/md_grey_800"
                        android:text="@string/repo_name"/>

                    <TextView
                        android:id="@+id/Description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:drawableLeft="@drawable/ic_description"
                        android:drawablePadding="4dp"
                        android:padding="4dp"
                        android:textSize="14sp"
                        android:textColor="@color/md_grey_800"
                        android:text="@string/description"/>

                    <TextView
                        android:id="@+id/RepoLink"
                        android:autoLink="all"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:drawableLeft="@drawable/ic_repo_link"
                        android:foreground="?attr/selectableItemBackgroundBorderless"
                        android:drawablePadding="4dp"
                        android:padding="4dp"
                        android:textSize="16sp"
                        android:clickable="true"
                        android:textColor="@color/md_grey_800"
                        android:text="@string/repo_link"/>

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>