<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView
    android:id="@+id/item_card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginLeft="8dp"
    app:cardCornerRadius="10dp"
    android:clickable="true"
    android:foreground="?attr/selectableItemBackgroundBorderless"
    android:elevation="12dp"
    app:cardBackgroundColor="@color/md_white_1000"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:orientation="vertical"
        android:baselineAligned="false">

        <!--Post heading section-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/userAvatar"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center"
                android:layout_margin="4dp"
                android:src="@drawable/ic_programmer"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_marginLeft="8dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/Name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textSize="16sp"
                    android:textColor="@color/md_grey_800"/>
                <TextView
                    android:id="@+id/UserName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/username"
                    android:textSize="12sp"
                    android:textColor="@color/md_grey_800"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingTop="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center|left"
                android:layout_marginTop="8dp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_user_type"/>

                <TextView
                    android:id="@+id/Type"
                    android:layout_marginLeft="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/type"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:textColor="@color/md_grey_800"
                    android:textStyle="normal"
                    android:textSize="14sp"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center|left"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_link_new"/>

                <TextView
                    android:id="@+id/ProfileLink"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:text="@string/repo_link"
                    android:autoLink="web"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:textColor="@color/md_grey_800"
                    android:textStyle="normal"
                    android:textSize="14sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center|left"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:layout_marginBottom="4dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_sponsor"/>

                <TextView
                    android:id="@+id/SponsorUrl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:text="@string/sponsor_link"
                    android:autoLink="web"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:textColor="@color/md_grey_800"
                    android:textStyle="normal"
                    android:textSize="14sp"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>