<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView
    android:id="@+id/item_card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginLeft="8dp"
    android:clickable="true"
    android:foreground="?attr/selectableItemBackgroundBorderless"
    app:cardCornerRadius="10dp"
    app:cardElevation="4dp"
    android:translationZ="2dp"
    app:cardBackgroundColor="@color/md_white_1000"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="4dp"
                android:gravity="center|left"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="42dp"
                    android:layout_height="42dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:layout_marginLeft="4dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:elevation="4dp"
                    android:orientation="vertical"
                    android:background="@drawable/a_rectangle_bg">

                    <ImageView
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_repo_new_1"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/name"
                        android:layout_marginLeft="8dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/repo_name"
                        android:maxLines="1"
                        android:ellipsize="end"
                        android:textColor="@color/md_grey_800"
                        android:textStyle="normal"
                        android:textSize="16sp"/>

                    <TextView
                        android:id="@+id/full_name"
                        android:layout_marginLeft="8dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/repo_full_name"
                        android:maxLines="1"
                        android:ellipsize="end"
                        android:textColor="@color/md_grey_800"
                        android:textStyle="normal"
                        android:textSize="12sp"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="2dp"
                android:paddingBottom="2dp"
                android:gravity="center|left"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_description_new_1"/>

                <TextView
                    android:id="@+id/description"
                    android:layout_marginLeft="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    android:autoLink="web"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:textColor="@color/md_grey_800"
                    android:textStyle="normal"
                    android:textSize="14sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_gravity="center"
                android:gravity="center|left"
                android:paddingTop="2dp"
                android:paddingBottom="2dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_coding"/>

                <TextView
                    android:id="@+id/language"
                    android:layout_marginLeft="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/language"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:textColor="@color/md_grey_800"
                    android:textStyle="normal"
                    android:textSize="14sp"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:weightSum="3"
            android:gravity="center"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:paddingLeft="4dp"
                android:gravity="center"
                android:background="@drawable/rectangle_back_cyan"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_gravity="center"
                    android:tint="@color/md_white_1000"
                    android:src="@drawable/ic_star_new"/>

                <TextView
                    android:id="@+id/stargazers_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textSize="14sp"
                    android:text="@string/number_of_stars"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:textColor="@color/md_white_1000" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:paddingLeft="4dp"
                android:background="@drawable/rectangle_back_orange"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_gravity="center"
                    android:tint="@color/md_white_1000"
                    android:src="@drawable/ic_code_fork_symbol"/>

                <TextView
                    android:id="@+id/forks_count"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:textSize="14sp"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:text="@string/number_of_forks"
                    android:textColor="@color/md_white_1000" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:paddingLeft="4dp"
                android:gravity="center"
                android:background="@drawable/rectangle_back_green"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_gravity="center"
                    android:tint="@color/md_white_1000"
                    android:src="@drawable/ic_watching"/>

                <TextView
                    android:id="@+id/watchers_count"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:textSize="14sp"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:layout_height="wrap_content"
                    android:text="@string/number_of_watch"
                    android:textColor="@color/md_white_1000" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>